--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -56,16 +56,25 @@ body {
 
 /* Cart Icon */
 .cart {
-    color: white;
-    display: flex;
     position: relative;
+    display: inline-block;
 }
 
-.cart_quantity_count {
-    margin-top: 16px;
-    margin-left: 27px;
+.cart-quantity {
     position: absolute;
-    font-size: 29px;
+    top: 6px;
+    right: 10px;
+    background-color: white;
+    color: black;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: bold;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 3px rgba(0,0,0,0.3);
 }
 
 /* === Product Layout === */
